examples/test/conf/EdgionPlugins/RealIp/HTTPRoute_default_real-ip-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: real-ip-test-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: edgion-plugins-gateway
      namespace: edgion-test
  hostnames:
    - "real-ip-test.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: real-ip-test
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
